--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,7 +4,14 @@ import Hr from "./Hr.astro";
 import LinkButton from "./LinkButton.astro";
 
 export interface Props {
-  activeNav?: "posts" | "tags" | "about" | "search";
+  activeNav?:
+    | "posts"
+    | "tags"
+    | "about"
+    | "search"
+    | "resume"
+    | "development"
+    | "academia";
 }
 
 const { activeNav } = Astro.props;
@@ -55,21 +62,42 @@ const { activeNav } = Astro.props;
           </svg>
         </button>
         <ul id="menu-items" class="display-none sm:flex">
-          <li>
-            <a href="/posts/" class={activeNav === "posts" ? "active" : ""}>
-              Posts
-            </a>
-          </li>
-          <li>
+          <!-- <li>
             <a href="/tags/" class={activeNav === "tags" ? "active" : ""}>
               Tags
             </a>
-          </li>
+          </li> -->
           <li>
             <a href="/about/" class={activeNav === "about" ? "active" : ""}>
               About
             </a>
           </li>
+          <li>
+            <a
+              href="/academia/"
+              class={activeNav === "academia" ? "active" : ""}
+            >
+              Academia
+            </a>
+          </li>
+          <li>
+            <a
+              href="/development/"
+              class={activeNav === "development" ? "active" : ""}
+            >
+              Development
+            </a>
+          </li>
+          <li>
+            <a href="/posts/" class={activeNav === "posts" ? "active" : ""}>
+              Posts
+            </a>
+          </li>
+          <!-- <li>
+            <a href="/resume/" class={activeNav === "resume" ? "active" : ""}>
+              Resume
+            </a>
+          </li> -->
           <li>
             <LinkButton
               href="/search/"
