--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -23,7 +23,7 @@ const {
   canonicalURL,
   pubDatetime,
   modDatetime,
-  readingTime, // we can now directly access readingTime from frontmatter
+  // readingTime, // we can now directly access readingTime from frontmatter
   tags,
 } = post.data;
 
