--- a/src/components/Pagination.astro
+++ b/src/components/Pagination.astro
@@ -23,7 +23,7 @@ const next = currentPage < totalPages ? "" : "disabled";
         className={`mr-4 select-none ${prev}`}
         ariaLabel="Previous"
       >
-        <svg xmlns="http://www.w3.org/2000/svg" class={`${prev}-svg`}>
+        <svg xmlns="http://www.w3.org/2000/svg" class:list={`${prev}-svg`}>
           <path d="M12.707 17.293 8.414 13H18v-2H8.414l4.293-4.293-1.414-1.414L4.586 12l6.707 6.707z" />
         </svg>
         Prev
@@ -36,7 +36,7 @@ const next = currentPage < totalPages ? "" : "disabled";
         ariaLabel="Next"
       >
         Next
-        <svg xmlns="http://www.w3.org/2000/svg" class={`${next}-svg`}>
+        <svg xmlns="http://www.w3.org/2000/svg" class:list={`${next}-svg`}>
           <path d="m11.293 17.293 1.414 1.414L19.414 12l-6.707-6.707-1.414 1.414L15.586 11H6v2h9.586z" />
         </svg>
       </LinkButton>
