--- a/src/components/ShareLinks.astro
+++ b/src/components/ShareLinks.astro
@@ -38,7 +38,7 @@ const shareLinks = [
 ] as const;
 ---
 
-<div class={`social-icons`}>
+<div class:list={`social-icons`}>
   <span class="italic">Share this post on:</span>
   <div class="text-center">
     {
