--- a/src/components/Tag.astro
+++ b/src/components/Tag.astro
@@ -8,18 +8,25 @@ const { tag, size = "sm" } = Astro.props;
 ---
 
 <li
-  class={`inline-block ${
-    size === "sm" ? "my-1 underline-offset-4" : "my-3 mx-1 underline-offset-8"
-  }`}
+  class:list={[
+    `inline-block`,
+    {
+      "my-1 underline-offset-4": size === "sm",
+      "my-3 mx-1 underline-offset-8": size !== "sm",
+    },
+  ]}
 >
   <a
     href={`/tags/${tag}/`}
     transition:name={tag}
-    class={`${size === "sm" ? "text-sm" : "text-lg"} pr-2 group`}
+    class:list={[
+      ` pr-2 group`,
+      { "text-sm": size === "sm", "text-lg": size !== "sm" },
+    ]}
   >
     <svg
       xmlns="http://www.w3.org/2000/svg"
-      class={`${size === "sm" ? " scale-75" : "scale-110"}`}
+      class:list={{ "scale-75": size === "sm", "scale-110": size !== "sm" }}
       ><path
         d="M16.018 3.815 15.232 8h-4.966l.716-3.815-1.964-.37L8.232 8H4v2h3.857l-.751 4H3v2h3.731l-.714 3.805 1.965.369L8.766 16h4.966l-.714 3.805 1.965.369.783-4.174H20v-2h-3.859l.751-4H21V8h-3.733l.716-3.815-1.965-.37zM14.106 14H9.141l.751-4h4.966l-.752 4z"
       ></path>
