--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -109,7 +109,7 @@ const socialImageURL = new URL(
 
     <script is:inline src="/toggle-theme.js"></script>
   </head>
-  <body>
+  <body class="pt-20">
     <slot />
   </body>
 </html>
