--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -48,6 +48,11 @@
     stroke-current stroke-2 opacity-90 group-hover:fill-transparent 
     sm:scale-110;
   }
+
+  img.figimage {
+    @apply border-2 border-skin-line;
+  }
+
   .prose {
     @apply prose-headings:!mb-3 prose-headings:!text-skin-base 
     prose-h3:italic prose-p:!text-skin-base 
