--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -116,10 +116,8 @@ const layoutProps = {
   /** Create a progress indicator
    *  at the top */
   function createProgressBar() {
-    // Create the main container div
-    const progressContainer = document.createElement("div");
-    progressContainer.className =
-      "progress-container fixed top-0 z-10 h-1 w-full bg-skin-fill";
+    // Get the Progress Container
+    const progressContainer = document.getElementById("progress-container");
 
     // Create the progress bar div
     const progressBar = document.createElement("div");
@@ -128,9 +126,6 @@ const layoutProps = {
 
     // Append the progress bar to the progress container
     progressContainer.appendChild(progressBar);
-
-    // Append the progress container to the document body or any other desired parent element
-    document.body.appendChild(progressContainer);
   }
   createProgressBar();
 
