--- a/src/layouts/AboutLayout.astro
+++ b/src/layouts/AboutLayout.astro
@@ -62,6 +62,8 @@ const { frontmatter } = Astro.props;
     }
   });
 
+  createProgressBar();
+
   /** Update the progress bar
    *  when user scrolls */
   function updateScrollProgress() {
