added researchgate social

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,7 @@ const rootLinks: { desc: string; href: string; title: string }[] = [
   },
   {
     desc: "If you are a student of mine, click here",
-    href: "/students",
+    href: "/tags/students",
     title: "Students",
   },
   {
