--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -75,8 +75,15 @@ const socialCount = SOCIALS.filter(social => social.active).length;
         <!-- </span> -->
         I'm Sanjib Kumar Sen, a software engineer who loves making machines understand
         human languages. I've built some cool stuff, like scalable speech recognition
-        systems and military recruitment platforms. Now, I'm chasing a PhD in NLP
-        and/or ImageVision to unlock even more secrets of the computers and humans.
+        systems and military recruitment and content management platforms. Not to
+        mention some popular open-sourced projects like <a
+          class="underline decoration-dashed underline-offset-4 hover:text-skin-accent"
+          href="https://github.com/sanjib-sen/weblatex">WebLaTeX</a
+        > and <a
+          class="underline decoration-dashed underline-offset-4 hover:text-skin-accent"
+          href="https://envshh.js.org">envshh</a
+        >. Now, I'm chasing a PhD in NLP and/or ImageVision to unlock even more
+        secrets of the computers and humans.
       </p>
       <p>
         Check out the
