--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -75,8 +75,8 @@ const socialCount = SOCIALS.filter(social => social.active).length;
         <!-- </span> -->
         I'm Sanjib Kumar Sen, a software engineer who loves making machines understand
         human languages. I've built some cool stuff, like scalable speech recognition
-        systems and military recruitment and content management platforms. Not to
-        mention some popular open-sourced projects like <a
+        systems and military recruitment platforms. Not to mention some popular open-sourced
+        projects like <a
           class="underline decoration-dashed underline-offset-4 hover:text-skin-accent"
           href="https://github.com/sanjib-sen/weblatex">WebLaTeX</a
         > and <a
