--- a/src/pages/posts/[slug]/index.astro
+++ b/src/pages/posts/[slug]/index.astro
@@ -1,11 +1,9 @@
 ---
 import { type CollectionEntry, getCollection } from "astro:content";
-import Posts from "@layouts/Posts.astro";
 import PostDetails from "@layouts/PostDetails.astro";
 import getSortedPosts from "@utils/getSortedPosts";
-import getPageNumbers from "@utils/getPageNumbers";
-import getPagination from "@utils/getPagination";
 import getPostsWithRT from "@utils/getPostsWithRT";
+
 export interface Props {
   post: CollectionEntry<"blog">;
 }
@@ -21,24 +19,13 @@ export async function getStaticPaths() {
     props: { post },
   }));
 
-  const pagePaths = getPageNumbers(posts.length).map(pageNum => ({
-    params: { slug: String(pageNum) },
-  }));
-
-  return [...postResult, ...pagePaths];
+  return postResult;
 }
 
-const { slug } = Astro.params;
 const { post } = Astro.props;
 
 const posts = await getCollection("blog");
-
 const sortedPosts = getSortedPosts(posts);
-
-const pagination = getPagination({
-  posts: sortedPosts,
-  page: slug,
-});
 ---
 
-{post ? <PostDetails post={post} /> : <Posts {...pagination} />}
+<PostDetails post={post} posts={sortedPosts} />
