--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -26,6 +26,7 @@ const {
   modDatetime,
   // readingTime, // we can now directly access readingTime from frontmatter
   tags,
+  editPost,
 } = post.data;
 
 const { Content } = await post.render();
@@ -83,6 +84,8 @@ const nextPost =
       modDatetime={modDatetime}
       size="lg"
       className="my-2"
+      editPost={editPost}
+      postId={post.id}
     />
     <article id="article" class="prose mx-auto mt-8 max-w-3xl">
       <Content />
