--- a/src/pages/posts/[slug]/index.astro
+++ b/src/pages/posts/[slug]/index.astro
@@ -2,7 +2,6 @@
 import { type CollectionEntry, getCollection } from "astro:content";
 import PostDetails from "@layouts/PostDetails.astro";
 import getSortedPosts from "@utils/getSortedPosts";
-import getPostsWithRT from "@utils/getPostsWithRT";
 
 export interface Props {
   post: CollectionEntry<"blog">;
@@ -11,10 +10,7 @@ export interface Props {
 export async function getStaticPaths() {
   const posts = await getCollection("blog", ({ data }) => !data.draft);
 
-  const postsWithRT = await getPostsWithRT(posts); // replace reading time logic with this func
-
-  const postResult = postsWithRT.map(post => ({
-    // make sure to replace posts with postsWithRT
+  const postResult = posts.map(post => ({
     params: { slug: post.slug },
     props: { post },
   }));
