--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -24,7 +24,6 @@ const {
   canonicalURL,
   pubDatetime,
   modDatetime,
-  // readingTime, // we can now directly access readingTime from frontmatter
   tags,
   editPost,
 } = post.data;
@@ -195,8 +194,10 @@ const nextPost =
   /** Create a progress indicator
    *  at the top */
   function createProgressBar() {
-    // Get the Progress Container
-    const progressContainer = document.getElementById("progress-container");
+    // Create the main container div
+    const progressContainer = document.createElement("div");
+    progressContainer.className =
+      "progress-container fixed top-0 z-10 h-1 w-full bg-skin-fill";
 
     // Create the progress bar div
     const progressBar = document.createElement("div");
@@ -205,6 +206,9 @@ const nextPost =
 
     // Append the progress bar to the progress container
     progressContainer.appendChild(progressBar);
+
+    // Append the progress container to the document body or any other desired parent element
+    document.body.appendChild(progressContainer);
   }
   createProgressBar();
 
