--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -91,7 +91,7 @@ const nextPost =
     </article>
 
     <ul class="my-8">
-      {tags.map(tag => <Tag tag={slugifyStr(tag)} />)}
+      {tags.map((tag: string) => <Tag tag={slugifyStr(tag)} />)}
     </ul>
 
     <div
