--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,6 +27,11 @@ const rootLinks: { desc: string; href: string; title: string }[] = [
     title: "Dev",
   },
   {
+    desc: "Check out my personal projects",
+    href: "/projects",
+    title: "Projects",
+  },
+  {
     desc: "If you are a student of mine, click here",
     href: "/tags/students",
     title: "Students",
