--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -21,14 +21,14 @@ const { props } = Astro;
 <main id="main-content">
   {
     "titleTransition" in props ? (
-      <h1>
+      <h1 class="!text-4xl text-skin-accent">
         {props.pageTitle[0]}
         <span transition:name={props.titleTransition}>
           {props.pageTitle[1]}
         </span>
       </h1>
     ) : (
-      <h1>{props.pageTitle}</h1>
+      <h1 class="!text-4xl text-skin-accent">{props.pageTitle}</h1>
     )
   }
   <p>{props.pageDesc}</p>
