--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -184,7 +184,7 @@ const { activeNav } = Astro.props;
     @apply mx-auto flex max-w-3xl flex-col items-center justify-between sm:flex-row;
   }
   .top-nav-wrap {
-    @apply relative flex w-full items-start justify-between p-4 sm:items-center sm:py-4;
+    @apply relative flex w-full items-start justify-between p-4 py-2 sm:items-center;
   }
   .logo {
     @apply absolute py-1 text-xl font-semibold sm:static sm:text-2xl;
