--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -21,7 +21,9 @@ const { frontmatter } = Astro.props;
   <Breadcrumbs />
   <main id="main-content">
     <section id="about" class="prose mb-10 max-w-3xl prose-img:border-0">
-      <h1 class="text-2xl tracking-wider sm:text-3xl">{frontmatter.title}</h1>
+      <h1 class="text-4xl tracking-wider !text-skin-accent">
+        {frontmatter.title}
+      </h1>
       <slot />
     </section>
     <div class="mb-4 flex items-center justify-center">
